--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
     --colorDeTextoHeader: white;
     --colorDeFondoHeader:white
 
-    --colorDeTextMain: red;
+    --colorDeTextMain: black;
     --colorDeFondoMain: red;
 
-    --colorDeTextFooter: white;
+    --colorDeTextFooter:    black;
     --colorDeFondoFooter: white;
 }
 
