--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* PAGE SETTINGS */
 :root {
     --colorDeTextoHeader: rgb(0, 0, 0);
-    --colorDeFondoHeader:white
+    --colorDeFondoHeader:rgb(255, 255, 255);
 
     --colorDeTextMain: black;
     --colorDeFondoMain: red;
